--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="container">
+        
     <form id="form">
         <input class="field" type="text" id="name" placeholder="Enter name">
 
@@ -14,7 +16,7 @@
 
         <input class="field" type="number" id="age" placeholder="Enter age">
 
-        <input class="field" type="number" id="phoneNumber" placeholder="Enter phoone number">
+        <input class="field" type="number" id="phoneNumber" placeholder="Enter phone number">
 
         <input class="field" type="email" id="email" placeholder="Enter email">
 
@@ -24,14 +26,19 @@
             <option value="engilish">engilish</option>
         </select>
 
-        <textarea class="field" id="desc" cols="30" rows="10"></textarea>
+        <textarea class="field" id="desc" placeholder="Enter description" cols="30" rows="10"></textarea>
 
         <input class="field" type="password" id="password" placeholder="Enter password">
 
         <button id="button">Saqlash</button>
     </form>
 
-    <div class="wrapper" id="wrapper">  
+    <div class="wrapper" id="wrapper">
+        <button id="Delite">Delite</button>
+    </div>
+    <div class="wrapp">
+        <button id="Remove__btn">Remova All</button>
+    </div>
     </div>
 
     <script src="./js/script.js"></script>
